# click-pwsh

./: LICENSE  README.md  pyproject.toml  setup.py
click_pwsh/: __init__.py  __main__.py  shell_completion.py
