[tool.poetry]
name = "click-pwsh"
version = "0.9.3"
description = "A click extension to support shell completion for PowerShell 7"
license = "BSD-3-Clause"
authors = ["Yu-Kai Lin <stephen359595@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/StephLin/click-pwsh"
repository = "https://github.com/StephLin/click-pwsh"
packages = [{include = "click_pwsh"}]

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
